WIP fix shift charts shift

--- a/modules/500-upmeter/images/webui/src/app/graph/_graph.scss
+++ b/modules/500-upmeter/images/webui/src/app/graph/_graph.scss
@@ -312,8 +312,6 @@ div.probes-container {
 	padding: 0;
 }
 div.probes-container {
-	margin: 0;
-	padding: 0;
 	box-shadow: inset 0 (-$shadow-len) ($shadow-blur) (-$shadow-spread) #00ffff,
 		inset 0 ($shadow-len) ($shadow-blur) (-$shadow-spread) #ff00ff;
 }
